2023-02-07  Indu Bhagat  <indu.bhagat@oracle.com>

	* pickles/sframe.pk: Use camel casing for types consistently.
	* pickles/sframe-dump.pk: Likewise.

2023-02-07  Indu Bhagat  <indu.bhagat@oracle.com>

	* pickles/sframe.pk: Update the pickle for AArch64 PAuth
	support.

2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (addiof): New instruction.
	(addlof): Likewise.
	(subiof): Likewise.
	(sublof): Likewise.
	(muliof): Likewise.
	(mullof): Likewise.
	(diviof): Likewise.
	(divlof): Likewise.
	(modiof): Likewise.
	(modlof): Likewise.
	(negiof): Likewise.
	(neglof): Likewise.
	(powiof): Likewise.
	(powlof): Likewise.
	* testsuite/poke.pvm/pvm-insns-test.pk (addiof): New test.
	(addlof): Likewise.
	(subiof): Likewise.
	(sublof): Likewise.
	(muliof): Likewise.
	(mullof): Likewise.
	(diviof): Likewise.
	(divlof): Likewise.
	(modiof): Likewise.
	(modlof): Likewise.
	(negiof): Likewise.
	(neglof): Likewise.
	(powiof): Likewise.
	(powlof): Likewise.

2023-02-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/search.pk (search_type): Fix `mapper' invocation.
	* testsuite/poke.pickles/search-test.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-02-06  Nikolaos Chatzikonstantinou  <nchatz314@gmail.com>

	* libpoke/std.pk (stoca): Add support for returning the converted
	value.
	* doc/poke.texi (stoca): Update accordingly.
	* testsuite/poke.std/std-test.pk: Add stoca-catos idempotence
	test.

2023-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pvm/pvm.exp: New file.
	* testsuite/poke.pvm/vm-insns.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-alloc.c (pvm_alloc_initialize): Do not initialize
	the boehm GC if it has been already initialized.

2023-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: Update examples to new semantics of FNAME ==
	EXPR.

2023-02-04  Jose E. Marchesi  <jemarch@gnu.org>
