@@ -551,6 +551,14 @@ PKL_DEF_INSN(PKL_INSN_POKED,"a","poked")
 PKL_DEF_INSN(PKL_INSN_BZ,"al","bz")
 PKL_DEF_INSN(PKL_INSN_BNZ,"al","bnz")
 
+PKL_DEF_INSN(PKL_INSN_NEGOF,"a","negof")
+PKL_DEF_INSN(PKL_INSN_ADDOF,"a","addof")
+PKL_DEF_INSN(PKL_INSN_SUBOF,"a","subof")
+PKL_DEF_INSN(PKL_INSN_MULOF,"a","mulof")
+PKL_DEF_INSN(PKL_INSN_DIVOF,"a","divof")
+PKL_DEF_INSN(PKL_INSN_MODOF,"a","modof")
+PKL_DEF_INSN(PKL_INSN_POWOF,"a","powof")
+
 PKL_DEF_INSN(PKL_INSN_EQ,"a","eq")
 PKL_DEF_INSN(PKL_INSN_NE,"a","ne")
 PKL_DEF_INSN(PKL_INSN_LT,"a","lt")
