@@ -1,3 +1,15 @@
+2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-insn.def (PKL_INSN_NEGOF): New macro-instruction.
+	(PKL_INSN_ADDOF): Likewise.
+	(PKL_INSN_SUBOF): Likewise.
+	(PKL_INSN_MULOF): Likewise.
+	(PKL_INSN_DIVOF): Likewise.
+	(PKL_INSN_MODOF): Likewise.
+	(PKL_INSN_POWOF): Likewise.
+	* libpoke/pkl-asm.c (pkl_asm_insn_binop): Add support for integer
+	overflow checking instructions.
+
 2023-02-07  Indu Bhagat  <indu.bhagat@oracle.com>
 
 	* pickles/sframe.pk: Use camel casing for types consistently.
